# YT-RAG-Chatbot

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: data_ingestion.py  main.py  rag_chain.py  retrieval.py
frontend/: app.py  pyproject.toml
