[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.4",
]
